2010-06-16  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (LIBTOOL_VERSION): bump to 2.2.8

2010-06-16  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.48++ (2010-06-16)

2010-06-16  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib): hln merges pathnames, which means that if the
	source pathname is absolute, the destination must be absolute as well

2010-06-15  Sam Steingold  <sds@gnu.org>

	Try to flush buffers even if CLOSE was called with :ABORT T.
	this partially reverts patch 2010-02-25 and fixes bug#3014919
	* stream.d (handle_close_errors, MAYBE_IGNORE_ERRORS): add
	(close_str_in, close_buff_in): do not accept unused abort arg
	(builtin_stream_close): do not pass abort to them
	(close_buff_out, close_generic, close_ochannel, close_buffered):
	use MAYBE_IGNORE_ERRORS around calls which may signal errors
	(oconv_unshift_output_buffered): accept abort arg
	* constobj.d (handler_for_error): add
	* lispbibl.d (clisp_thread_t) [MULTITHREAD]: add
	_running_handle_close_errors
	(running_handle_close_errors) [MULTITHREAD]: define
	* makemake.in (check-script): test for bug#3014919

2010-06-15  Sam Steingold  <sds@gnu.org>

	* pathname.d (handle_directory_encoding_error): use unwind_upto
	instead of a home-brewed concoction

2010-06-15  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (venv_out) [DEBUG_SPVW]: add

2010-06-13  Sam Steingold  <sds@gnu.org>

	* stream.d (BUILT-IN-STREAM-ELEMENT-TYPE): return NIL for an empty
	CONCATENATED-STREAM (bug#3014921)

2010-06-10  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:LOADAVG): fix a GC-safety bug;
	use round() for integer returns

2010-06-10  Sam Steingold  <sds@gnu.org>

	* io.d (STRUCTURE-READER): fix g++ compilation and a GC-safety bug

2010-06-10  Sam Steingold  <sds@gnu.org>

	make OS:BOGOMIPS work even when clisp is compiled with -O
	* modules/syscalls/bogomips.c: extract from calls.c
	* modules/syscalls/calls.c (BOGOMIPS): call extern bogomips()